--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "firebase": "^9.6.11",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-picker-select": "^8.0.4",
