--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "firebase": "^9.6.11",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-countdown-component": "^2.7.1",
+    "react-native-element-timer": "^1.5.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
